# arch-smart-update-checker

./: .flake8  .gitignore  ALL_SECURITY_MEASURES.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PKGBUILD  README.md  SECURITY_REPORT.md  TEST_REPORT.md  arch-smart-update-checker.py  asuc-cli  asuc-gui  install.sh  pyproject.toml  requirements.txt  setup.sh  uninstall.sh
.github/: INCIDENT_RESPONSE.md
.github/workflows/: ci.yml  security-profiles.yml
docs/: ALL_SECURITY_MEASURES.md  DISCLAIMER.md  HOW_ASUC_WORKS.md  SECURITY.md  SECURITY_GUIDELINES.md  SECURITY_IMPLEMENTATION_REPORT.md  SECURITY_INDEX.md  SECURITY_REPORT.md  TEST_REPORT.md
scripts/: create_embedded_preview.py  generate_efficient_svg_icons.py  generate_icons.py  generate_new_icons.py  generate_new_svg_icons.py  generate_svg_icon.py  generate_svg_icons_from_svg.py  png_to_svg_icons.py  preview_icons.py  security-update-check.py  terminal_preview.py
security/apparmor/: README.md  install.sh  usr.bin.asuc
security/selinux/: Makefile  README.md  asuc.fc  asuc.if  asuc.te  install.sh
src/: __init__.py  checker.py  config.py  constants.py  exceptions.py  gui_app.py  main.py  models.py  news_fetcher.py  package_manager.py
src/cli/: __init__.py  main.py  output.py
src/gui/: __init__.py  dashboard.py  dimensions.py  input_validator.py  layout_manager.py  main.py  main_window.py  news_browser.py  package_manager.py  secure_callback_manager.py  settings.py  update_history.py  window_mixin.py
src/ui/: __init__.py  colors.py  formatter.py  pager.py
src/utils/: __init__.py  cache.py  distribution.py  file_monitor.py  instance_lock.py  logger.py  pacman_runner.py  patterns.py  sandbox_profiles.py  secure_memory.py  security_metrics.py  subprocess_wrapper.py  thread_manager.py  timer_manager.py  update_history.py  validators.py  window_geometry.py
tests/: __init__.py  conftest.py  test_basic.py  test_cache.py  test_cli.py  test_dashboard_integration.py  test_distribution_detection.py  test_external_update_detection.py  test_gui.py  test_gui_extended.py  test_integration_pacman.py  test_new_features.py  test_news_fetcher_full.py  test_news_fetcher_simple.py  test_pacman_runner.py  test_patterns.py  test_performance.py  test_persistence_edge_cases.py  test_theme_integration.py  test_update_functionality.py  test_update_history.py  test_user_workflows.py  test_utils.py
